--- a/QALegend/test-output/emailable-report.html
+++ b/QALegend/test-output/emailable-report.html
@@ -9,14 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Functional Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">5</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">84,785</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Regression Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">25,968</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">test.HomePageTest</td><td><a href="#m0">verifyHomePageTitle</a></td><td rowspan="1">1714475689888</td><td rowspan="1">6693</td></tr><tr class="passedeven"><td><a href="#m1">verifyUserLoginDate</a></td><td rowspan="1">1714475708459</td><td rowspan="1">5222</td></tr><tr class="passedodd"><td rowspan="1">test.ManageUserPageTest</td><td><a href="#m2">verifyManageUserTittle</a></td><td rowspan="1">1714475749997</td><td rowspan="1">12536</td></tr><tr class="passedeven"><td rowspan="2">test.ResetPageTest</td><td><a href="#m3">verifyErrorMessageWithInvalidEmailid</a></td><td rowspan="1">1714475740126</td><td rowspan="1">2871</td></tr><tr class="passedeven"><td><a href="#m4">verifyResetPageTitle</a></td><td rowspan="1">1714475719854</td><td rowspan="1">8914</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Functional Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Regression Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">test.ManageUserPageTest</td><td><a href="#m0">verifyManageUserTittle</a></td><td rowspan="1">1714660485222</td><td rowspan="1">8547</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">test.HomePageTest#verifyHomePageTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">test.HomePageTest#verifyUserLoginDate</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">test.ManageUserPageTest#verifyManageUserTittle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">test.ResetPageTest#verifyErrorMessageWithInvalidEmailid</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">test.ResetPageTest#verifyResetPageTitle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Regression Test</h2><h3 id="m0">test.ManageUserPageTest#verifyManageUserTittle</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
