--- a/QALegend/test-output/old/Functional Suite/methods-alphabetical.html
+++ b/QALegend/test-output/old/Functional Suite/methods-alphabetical.html
@@ -1,34 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Functional Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a465be">  <td>24/04/30 16:45:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.closeBrowser(org.testng.ITestResult)[pri:0, instance:test.ResetPageTest@61862a7f]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/04/30 16:45:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.closeBrowser(org.testng.ITestResult)[pri:0, instance:test.ResetPageTest@61862a7f]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/04/30 16:45:13</td>   <td>-29321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.closeBrowser(org.testng.ITestResult)[pri:0, instance:test.HomePageTest@1cbbffcd]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/04/30 16:46:02</td>   <td>19543</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.closeBrowser(org.testng.ITestResult)[pri:0, instance:test.ManageUserPageTest@441772e]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/04/30 16:45:13</td>   <td>-29321</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.closeBrowser(org.testng.ITestResult)[pri:0, instance:test.HomePageTest@1cbbffcd]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td>  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/04/30 16:44:56</td>   <td>-46057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup(java.lang.String,java.lang.String)[pri:0, instance:test.HomePageTest@1cbbffcd]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/04/30 16:44:56</td>   <td>-46057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup(java.lang.String,java.lang.String)[pri:0, instance:test.HomePageTest@1cbbffcd]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/04/30 16:45:43</td>   <td>547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup(java.lang.String,java.lang.String)[pri:0, instance:test.ManageUserPageTest@441772e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/04/30 16:45:29</td>   <td>-13683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup(java.lang.String,java.lang.String)[pri:0, instance:test.ResetPageTest@61862a7f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="a465be">  <td>24/04/30 16:45:29</td>   <td>-13683</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup(java.lang.String,java.lang.String)[pri:0, instance:test.ResetPageTest@61862a7f]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="83da8e">  <td>24/04/30 16:45:40</td>   <td>-2880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ResetPageTest.verifyErrorMessageWithInvalidEmailid()[pri:7, instance:test.ResetPageTest@61862a7f]">verifyErrorMessageWithInvalidEmailid</td> 
-  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="d46ab7">  <td>24/04/30 16:44:49</td>   <td>-53118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyHomePageTitle()[pri:4, instance:test.HomePageTest@1cbbffcd]">verifyHomePageTitle</td> 
-  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="a162b8">  <td>24/04/30 16:45:49</td>   <td>6991</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageUserPageTest.verifyManageUserTittle()[pri:8, instance:test.ManageUserPageTest@441772e]">verifyManageUserTittle</td> 
-  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="83da8e">  <td>24/04/30 16:45:19</td>   <td>-23152</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ResetPageTest.verifyResetPageTitle()[pri:6, instance:test.ResetPageTest@61862a7f]">verifyResetPageTitle</td> 
-  <td>main@331994761</td>   <td></td> </tr>
-<tr bgcolor="d46ab7">  <td>24/04/30 16:45:08</td>   <td>-34547</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyUserLoginDate()[pri:5, instance:test.HomePageTest@1cbbffcd]">verifyUserLoginDate</td> 
-  <td>main@331994761</td>   <td></td> </tr>
+<tr bgcolor="88b285">  <td>24/05/02 20:04:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Base.closeBrowser(org.testng.ITestResult)[pri:0, instance:test.ManageUserPageTest@6bf0219d]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td>  <td>main@1110031167</td>   <td></td> </tr>
+<tr bgcolor="88b285">  <td>24/05/02 20:04:28</td>   <td>-25641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Base.setup(java.lang.String,java.lang.String)[pri:0, instance:test.ManageUserPageTest@6bf0219d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1110031167</td>   <td></td> </tr>
+<tr bgcolor="d0b2b5">  <td>24/05/02 20:04:45</td>   <td>-8569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManageUserPageTest.verifyManageUserTittle()[pri:8, instance:test.ManageUserPageTest@6bf0219d]">verifyManageUserTittle</td> 
+  <td>main@1110031167</td>   <td></td> </tr>
 </table>
